WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168653
[iOS] WebKit1 should use shared memory pressure handler code.
https://bugs.webkit.org/show_bug.cgi?id=168653
Summary
[iOS] WebKit1 should use shared memory pressure handler code.
Andreas Kling
Reported
2017-02-21 06:45:49 PST
WebKit1 on iOS currently has its own little memory pressure handler implementation. Let's share the code with the other ports.
Attachments
Patch
(15.76 KB, patch)
2017-02-21 07:02 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(17.31 KB, patch)
2017-02-21 07:06 PST
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
Patch for landing
(16.90 KB, patch)
2017-02-21 08:10 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-02-21 07:02:00 PST
Created
attachment 302254
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-21 07:04:38 PST
Attachment 302254
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebView.mm:9876: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2017-02-21 07:06:09 PST
Created
attachment 302255
[details]
Patch
WebKit Commit Bot
Comment 4
2017-02-21 07:07:26 PST
Attachment 302255
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebView.mm:9842: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 5
2017-02-21 07:24:38 PST
Comment on
attachment 302255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302255&action=review
> Source/WebKit/mac/WebView/WebViewPrivate.h:-459 > -+ (BOOL)_isUnderMemoryPressure; > -+ (void)_clearMemoryPressure; > -+ (BOOL)_shouldWaitForMemoryClearMessage; > -+ (void)_releaseMemoryNow;
Please make sure there are no clients for these.
Andreas Kling
Comment 6
2017-02-21 08:10:35 PST
Created
attachment 302259
[details]
Patch for landing Keep _releaseMemoryNow as it turns out there are Apple-internal clients for that. Thx2Antti for being suspicious about this!
WebKit Commit Bot
Comment 7
2017-02-21 08:11:28 PST
Attachment 302259
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebView.mm:1678: No space between ^ and block definition. [whitespace/brackets] [4] ERROR: Source/WebKit/mac/WebView/WebView.mm:9849: No space between ^ and block definition. [whitespace/brackets] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8
2017-02-21 13:06:36 PST
Comment on
attachment 302259
[details]
Patch for landing Clearing flags on attachment: 302259 Committed
r212742
: <
http://trac.webkit.org/changeset/212742
>
WebKit Commit Bot
Comment 9
2017-02-21 13:06:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug